# dwe-core

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  adapters.json  pyproject.toml
.github/workflows/: pypi-publish.yml  tag-version.yml
docs/: PRD.md
docs/adr/: ADR_001_technology_stack_selection_for_dwe.md  ADR_002_open_source_license_for_dwe.md  ADR_003_governance_model_and_copyright.md
dwe/: __init__.py  adapters.json  cli.py  git_ops.py  registry.py  secrets.py  service.py  state.py
