[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dwe-core"
version = "0.1.0a1"
description = "DWE CLI - Data Warehouse Ecosystem Orchestrator"
readme = "README.md"
packages = [{ include = "dwe" }]

[tool.poetry.dependencies]
python = ">=3.10"
typer = { version = ">=0.9.0", extras = ["all"] }
copier = ">=9.0.0"
gitpython = ">=3.1.40"
PyGithub = ">=2.1.1"
python-gitlab = ">=4.4.0"
jinja2 = ">=3.1.2"
rich = ">=13.7.0"

[tool.poetry.scripts]
dwe = "dwe.cli:app"
