[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dwe-core"
version = "0.1.3"
description = "DWE CLI - Data Warehouse Ecosystem Orchestrator"
readme = "README.md"
license = "Apache-2.0"
authors = ["Ponder <ponder-all@ponder.co>"]
homepage = "https://github.com/ponderdwe-org/dwe-core"
repository = "https://github.com/ponderdwe-org/dwe-core"
packages = [{ include = "dwe" }]
include = [{ path = "dwe/adapters.json" }]

[tool.poetry.dependencies]
python = ">=3.10"
typer = { version = ">=0.9.0", extras = ["all"] }
copier = ">=9.0.0"
gitpython = ">=3.1.40"
PyGithub = ">=2.1.1"
python-gitlab = ">=4.4.0"
jinja2 = ">=3.1.2"
pyyaml = ">=6.0.0"
rich = ">=13.7.0"
boto3 = ">=1.26.0"

[tool.poetry.scripts]
dwe = "dwe.cli:app"

